dao operations, front end pages